--- a/rootCSS.css
+++ b/rootCSS.css
@@ -12,7 +12,7 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 300vh;
+    /* height: 300vh; */
     justify-content: flex-end;
 }
 
