--- a/base-font-styles.css
+++ b/base-font-styles.css
@@ -1,7 +1,15 @@
 @font-face {
-    font-family: "Ubuntu";
-    src: url("./assets/fonts/Ubuntu-Bold.ttf") format("truutype"),
-        url("./assets/fonts/Ubuntu-Light.ttf") format("truetype"),
-        url("./assets/fonts/Ubuntu-Medium.ttf") format("truetype"),
-        url("./assets/fonts/Ubuntu-Regular.ttf") format("truetype");
+    font-family: 'Roboto', sans-serif;
+    src: url("./assets/fonts/Roboto-Black.ttf") format("truutype"),
+        url("./assets/fonts/Roboto-BlackItalic.ttf") format("truutype"),
+        url("./assets/fonts/Roboto-Bold.ttf") format("truetype"),
+        url("./assets/fonts/Roboto-BoldItalic.ttf") format("truetype"),
+        url("./assets/fonts/Roboto-Italic.ttf") format("truetype"),
+        url("./assets/fonts/Roboto-Light.ttf") format("truetype"),
+        url("./assets/fonts/Roboto-LightItalic.ttf") format("truetype"),
+        url("./assets/fonts/Roboto-Medium.ttf") format("truetype"),
+        url("./assets/fonts/Roboto-MediumItalic.ttf") format("truetype"),
+        url("./assets/fonts/Roboto-Regular.ttf") format("truetype"),
+        url("./assets/fonts/Roboto-Thin.ttf") format("truetype"),
+        url("./assets/fonts/Roboto-ThinItalic.ttf") format("truetype");
 }
