--- a/rootCSS.css
+++ b/rootCSS.css
@@ -1,7 +1,7 @@
 html {
     width: 100%;
     height: 100vh;
-    font-family: "Ubuntu";
+    font-family: 'Roboto', sans-serif;
     scroll-behavior: smooth;
 }
 
@@ -12,7 +12,6 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
-    /* height: 300vh; */
     justify-content: flex-end;
 }
 
