--- a/rootCSS.css
+++ b/rootCSS.css
@@ -153,3 +153,11 @@ p {
     color: #00000099;
     font-weight: 400;
 }
+
+a:link,
+a:visited,
+a:hover,
+a:focus,
+a:active {
+    text-decoration: none;
+}
