--- a/src/css/commonStyles.css
+++ b/src/css/commonStyles.css
@@ -1,3 +1,27 @@
+body {
+  width: 100%;
+  height: 100vh;
+  font-family: 'Roboto', sans-serif;
+  scroll-behavior: smooth;
+  margin:0;
+}
+
+p {
+  margin: 0px;
+}
+
+a:link,
+a:visited,
+a:hover,
+a:focus,
+a:active {
+  text-decoration: none;
+}
+
+a:hover {
+  cursor: pointer;
+}
+
 /* width */
 ::-webkit-scrollbar {
     width: 7px;
