--- a/src/navigation/style.css
+++ b/src/navigation/style.css
@@ -1,5 +1,9 @@
 .side-navigation-menu {
     width: 7%;
+}
+
+.fixed-navigation-menu{
+    width: 7%;
     height: 100%;
     background-color: black;
     display: flex;
