--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -8,16 +8,72 @@
     position: relative;
 }
 
+.profile-background{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
+.profile-background-overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: black;
+    opacity: 0.7;
+}
+
+.profile-background-image{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: blur(8px);
+    -webkit-filter: blur(8px);
+}
+
+.profile-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0,0,0, 0.4);
+    color: white;
+    padding:20px;
+    border: 2px solid #f1f1f1;
+}
+
+.greeting{
+    font-size: 1.5rem;
+    font-weight: 300;
+    font-style: italic;
+}
 .name {
-    font-size: 3.5rem;
-    font-weight: 600;
-    text-align: center;
+    font-size: 3rem;
+    font-weight: 500;
 }
 
 .about-me {
-    font-size: 2.5rem;
-    font-weight: 500;
-    color: #000000AA;
-    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 300;
+}
 
+.profile-url {
+    display: flex;
+    margin-top: 64px
+}
+
+.profile-url-icon {
+     font-size: 64px;
+     color: white;
+     padding: 12px;
+ }
+
+.profile-url-icon a{
+    text-decoration: none;
+    cursor: pointer;
+    color: white;
 }
