--- a/src/skin.css
+++ b/src/skin.css
@@ -4,6 +4,7 @@ body {
   font-family: 'Roboto', sans-serif;
   scroll-behavior: smooth;
   margin:0;
+  color: #868e96;
 }
 
 p {
@@ -16,10 +17,42 @@ a:hover,
 a:focus,
 a:active {
   text-decoration: none;
+  color: black;
 }
 
 a:hover {
   cursor: pointer;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0!important;
+  text-transform: uppercase;
+}
+
+h1 {
+  font-size: 2em;
+}
+
+h1, h2 {
+  font-weight: 700;
+}
+
+ h3, h4, h5, h6 {
+  font-weight: 600;
+}
+
+h2 {
+  color: black;
+}
+
+h3 {
+  color: #696969;
+}
+
+section {
+  margin-top: 100px;
+  padding-bottom: 200px;
+  border-bottom: 1px solid lightgrey;
 }
 
 /* width */
