--- a/app/css/index.css
+++ b/app/css/index.css
@@ -1,7 +1,7 @@
 html {
     width: 100%;
     height: 100vh;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Mulish';
     scroll-behavior: smooth;
 }
 
@@ -19,21 +19,70 @@ p {
     margin: 0px;
 }
 
-.side-navigation-menu {
-    width: 7%;
+.side-navigation-menu-container {
+    width: 29%;
     height: 100%;
-    background-color: black;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
     position: fixed;
     left: 0;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+}
+
+.side-navigation-menu {
+    display: flex;
+    flex-direction: column;
+    margin-left: 25%;
+    margin-right: 5%;
 }
 
 .side-menu-item {
-    width: 60%;
-    aspect-ratio: 1;
+    color: white;
+    padding: 0;
+    margin: 0;
+}
+
+.side-menu-title {
+    margin-bottom: 20px;
+}
+
+.side-menu-sub-title {
+margin-top: 10px;
+margin-bottom: 10px;
+color: #BBBBBB;
+font-size: 20px;
+letter-spacing: normal;
+animation-duration: 300ms;
+    animation-name: animation-side-menu-sub-title-font-scale-reverse;
+}
+
+@keyframes animation-side-menu-sub-title-font-scale-reverse {
+    from {
+        letter-spacing: 1px;
+    }
+    to {
+        letter-spacing: normal;
+    }
+}
+
+.side-menu-sub-title:hover {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: white;
+    font-size: 20px;
+    letter-spacing: 1px;
+    animation-duration: 300ms;
+    animation-name: animation-side-menu-sub-title-font-scale;
+}
+
+@keyframes animation-side-menu-sub-title-font-scale {
+    from {
+        letter-spacing: normal;
+    }
+    to {
+        letter-spacing: 1px;
+    }
 }
 
 .side-menu-item-icon {
@@ -43,7 +92,7 @@ p {
 }
 
 .page-container {
-    width: 93%;
+    width: 71%;
     display: flex;
     flex-direction: column;
 }
@@ -100,9 +149,6 @@ p {
     display: flex;
     flex-direction: column;
 }
-
-
-.section-heading {}
 
 .projects-container {
     display: flex;
