--- a/app/css/about-me-page.css
+++ b/app/css/about-me-page.css
@@ -38,7 +38,7 @@
     width: 100%; 
     height: 100%;
      position: absolute;
-      background-color: white;
+      background-color: black;
        opacity: 0.0;
         align-items: center;
          justify-content: center; 
@@ -61,7 +61,7 @@
     width: 100%; 
     height: 100%;
      position: absolute;
-      background-color: white;
+      background-color: black;
        opacity: 0.5;
         align-items: center;
          justify-content: center; 
@@ -83,6 +83,7 @@
 .about-me-image-overlay-text {
     width: min-content; 
     white-space: nowrap;
+    color: white;
 }
 
 .about-me-personal-details-title {
