--- a/app/css/education.css
+++ b/app/css/education.css
@@ -58,8 +58,11 @@
     display: flex;
     flex-direction: row;
     position: relative;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    /* margin-top: 10px;
+    margin-bottom: 10px; */
+
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .education-separator-offset-view {
@@ -70,5 +73,5 @@
     flex: 1;
     height: 1px;
     /* background: linear-gradient(to right, white, transparent); */
-    background: linear-gradient(to right, transparent, #FFFFFF);
+    /* background: linear-gradient(to right, transparent, #FFFFFF); */
 }
