--- a/app/css/education.css
+++ b/app/css/education.css
@@ -1,5 +1,7 @@
 #education-container {
     padding-top: 100px;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 /* Education Detail */
@@ -11,7 +13,7 @@
 }
 
 .education-item-graduation-year {
-    width: 100px;
+    width: 150px;
     color: white;
     margin: 0;
     text-align: end;
