Updated Education and Work details page UI

--- a/app/css/education.css
+++ b/app/css/education.css
@@ -15,6 +15,7 @@
 .education-item-graduation-year {
     width: 150px;
     color: white;
+    opacity: 0.5;
     margin: 0;
     text-align: end;
 }
