Updated About me page

--- a/app/css/index.css
+++ b/app/css/index.css
@@ -14,10 +14,10 @@ body {
     width: 100%;
     justify-content: flex-end;
 }
-
+/* 
 p {
     margin: 0px;
-}
+} */
 
 .side-navigation-menu-container {
     width: 29%;
