--- a/app/css/about-me-page.css
+++ b/app/css/about-me-page.css
@@ -1,28 +1,27 @@
-#img-about-me-profile-image{
-}
+#img-about-me-profile-image {}
 
 #about-me-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 100vh;                
+    min-height: 100vh;
     justify-content: flex-start;
 }
 
 #about-me-image-list-container {
     aspect-ratio: 20/9;
     /* aspect-ratio: 3/1; */
-                object-fit: cover;
-                overflow: hidden;
-                width: 90%;
-                margin-top: 10%;
-                display: flex;
+    object-fit: cover;
+    overflow: hidden;
+    width: 90%;
+    margin-top: 10%;
+    display: flex;
 }
 
 .about-me-image-container {
-    flex: 1; 
-    overflow: hidden; 
-    display: flex;   
+    flex: 1;
+    overflow: hidden;
+    display: flex;
     position: relative;
 }
 
@@ -30,20 +29,19 @@
     width: "100%";
     height: "100%";
     object-fit: cover;
-    overflow: hidden; 
+    overflow: hidden;
 }
 
 .about-me-image-overlay-container {
     display: flex;
-    width: 100%; 
+    width: 100%;
     height: 100%;
-     position: absolute;
-      background-color: black;
-       opacity: 0.0;
-        align-items: center;
-         justify-content: center; 
-
-         animation-duration: 300ms;
+    position: absolute;
+    background-color: black;
+    opacity: 0.0;
+    align-items: center;
+    justify-content: center;
+    animation-duration: 300ms;
     animation-name: animation-about-me-image-overlay-container;
 }
 
@@ -56,16 +54,15 @@
     }
 }
 
-.about-me-image-overlay-container:hover{
+.about-me-image-overlay-container:hover {
     display: flex;
-    width: 100%; 
+    width: 100%;
     height: 100%;
-     position: absolute;
-      background-color: black;
-       opacity: 0.5;
-        align-items: center;
-         justify-content: center; 
-
+    position: absolute;
+    background-color: black;
+    opacity: 0.5;
+    align-items: center;
+    justify-content: center;
     animation-duration: 300ms;
     animation-name: animation-about-me-image-overlay-container-active;
 }
@@ -79,20 +76,48 @@
     }
 }
 
-
 .about-me-image-overlay-text {
-    width: min-content; 
+    width: min-content;
     white-space: nowrap;
     color: white;
 }
 
-.about-me-personal-details-title {
-    color: white; 
-    font-style: italic;
+/* User Details */
+
+.about-me-table-row {
+    display: "flex";
+    flex-direction: "row";
 }
 
-.about-me-personal-details-value {
+.about-me-table-data-title {
+    flex: 1;
+}
+
+.about-me-table-data-value {
+    flex: 2;
+}
+
+.about-me-table-data-separator {
+    flex: 0.05;
+}
+
+.about-me-user-details-title {
     color: white;
-     opacity: 0.5; 
-    margin-left: 10px;
+    opacity: 0.75;
+    /* font-weight: bold; */
+    margin: 0;
+    text-align: right;
+}
+
+.about-me-user-details-value {
+    color: white;
+    opacity: 0.5;
+    margin: 0;
+}
+
+.about-me-user-details-separator {
+    color: white;
+    opacity: 0.5;
+    text-align: center;
+    margin: 0;
 }
